--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <img src=
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" atl="A lion Raaring">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" atl="A lion Raaring" title="Roar">
 
 </body>
 </html>
