--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <img src="https://images.app.goo.gl/T3JD7LuTSEehPZGA6">
-  <img src="https://images.app.goo.gl/vDmzopiz5KQGUCho7" atl="A tigar">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" atl="A lion Raaring" title="Roar">
+  <img src="https://images.app.goo.gl/vDmzopiz5KQGUCho7" alt="A tigar">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion Raaring" title="Roar">
 
 </body>
 </html>
