--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img src="https://images.app.goo.gl/T3JD7LuTSEehPZGA6">
+  <img src="https://images.app.goo.gl/vDmzopiz5KQGUCho7" alt="A tigar">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion Raaring" title="Roar">
 
 </body>
 </html>
